--- a/package.json
+++ b/package.json
@@ -5,17 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
     "start": "node ./build/index.js serve",
-    "manage": "node ./build/index.js",
-    "test": "glob -c \"node --import tsx --no-warnings --test\" \"./src/**/*.test.ts\"",
-    "test:watch": "glob -c \"node --import tsx --no-warnings --watch --test\" \"./src/**/*.test.ts\"",
-    "dev": "npm-run-all --parallel dev:start test:watch",
-    "dev:start": "nodemon --watch src --ext 'js,ts' --exec 'tsx ./src/index.ts --force-pretty-logs serve'",
-    "dev:manage": "tsx ./src/index.ts",
-    "db": "npx knex --knexfile ./src/repositories/sqlite/knexfile.ts",
-    "db:migrate": "npm run db migrate:latest",
-    "knex": "knex"
+    "fetch": "node ./index.js fetch && node ./index.js embed backfill"
   },
   "author": "",
   "license": "ISC",
