--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node ./build/index.js serve",
+    "start": "node ./index.js serve",
+    "dev": "nodemon ./index.js serve",
     "fetch": "node ./index.js fetch && node ./index.js embed backfill"
   },
   "author": "",
@@ -18,6 +19,7 @@
     "@fastify/secure-session": "^7.5.1",
     "@fastify/static": "^7.0.4",
     "@hapi/boom": "^10.0.1",
+    "ajv-errors": "^3.0.0",
     "better-sqlite3": "^11.1.2",
     "commander": "^12.1.0",
     "convict": "^6.2.4",
