play with embedding search to display feed items

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {       
+  "dependencies": {
     "@fastify/accepts": "^4.3.0",
     "@fastify/compress": "^7.0.3",
     "@fastify/cookie": "^9.3.1",
     "@fastify/csrf-protection": "^6.4.1",
+    "@fastify/formbody": "^7.4.0",
     "@fastify/secure-session": "^7.5.1",
     "@fastify/static": "^7.0.4",
     "@hapi/boom": "^10.0.1",
